<resources>
    <string name="app_name">TaskWhiz</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="no_tienes_una_cuenta_reg_strate">¿No tienes una cuenta? Regístrate</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="im_gen_de_fondo">imágen de fondo</string>
    <string name="logotipo">logotipo</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n">¿Ya tienes una cuenta? Inicia Sesión</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="reestablecer">Reestablecer</string>
    <string name="icono_del_men">Icono del menú</string>
    <string name="dashboard">Dashboard</string>
    <string name="agregar_tarea">Agregar Tarea</string>
    <string name="ingrese_su_tarea">Ingrese su tarea</string>
    <string name="t_tulo_de_la_tarea">Título de la Tarea</string>
    <string name="descripci_n_detallada_de_la_tarea">Descripción detallada de la tarea...</string>
    <string name="marcar_como_completada">Marcar como Completada</string>
    <string name="editar_tarea">Editar Tarea</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Abrir cajón de navegación</string>
    <string name="navigation_drawer_close">Cerrar cajón de navegación</string>
    <string name="completed_tasks">Tareas Terminadas</string>
    <string name="incompleted_tasks">Tareas Pendientes</string>
</resources>