<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/im_gen_de_fondo"
        android:scaleType="centerCrop"
        android:src="@drawable/background01" />

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0.9"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="288dp"
            android:layout_height="259dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logotipo"
            android:src="@drawable/logo_taskwhiz" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/iniciar_sesion" />

        <TextView
            android:id="@+id/forgotPasswordLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/olvidaste_tu_contrase_a"
            android:textColor="#0000FF" />

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/no_tienes_una_cuenta_reg_strate"
            android:textColor="#0000FF" />

    </LinearLayout>
</RelativeLayout>