<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/im_gen_de_fondo"
        android:scaleType="centerCrop"
        android:src="@drawable/background01" />

    <LinearLayout
        android:id="@+id/forgotPasswordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0.9"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="288dp"
            android:layout_height="259dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logotipo"
            android:src="@drawable/logo_taskwhiz" />

        <EditText
            android:id="@+id/forgotPasswordEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/sendResetLinkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reestablecer" />

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/ya_tienes_una_cuenta_inicia_sesi_n"
            android:textColor="#0000FF" />
    </LinearLayout>
</RelativeLayout>
